# hamclock-systemd

./: .gitignore  CMakeLists.src  CMakeLists.txt  Hacks.md  PiHeadlessSetup.md  README.md  Repository.md  index.md  make_package  postinst  preinst
SourceCode/: ._ESPHamClock  build  buildall  buildall-fb0  buildall-web  fetch  fetch_build
resources/repository/: ve3ysh.list
resources/systemd/: hamclock-web.service  hamclock.service
